Montserrat en footer

--- a/Anuncios/css/anuncios.css
+++ b/Anuncios/css/anuncios.css
@@ -319,6 +319,7 @@ h1{
 .footer-principal {
   background-color: #1D72A7;
   color: white;
+  font-family: "Montserrat", sans-serif;
   font-size: 13.5px;
   padding: 6px 10px;
   width: 100%;
