--- a/Eventos/css/eventos.css
+++ b/Eventos/css/eventos.css
@@ -316,6 +316,7 @@ h1{
   font-size: 13.5px;
   padding: 6px 10px;
   width: 100%;
+  font-family: "Montserrat", sans-serif;
 }
 
 .footer-contenido {
