--- a/Emprendimientos/VistaEmprendimientos.css
+++ b/Emprendimientos/VistaEmprendimientos.css
@@ -6,7 +6,9 @@
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
-
+svg{
+    margin-top: 5%;
+}
 .imagen-container img {
     width: 100%;
     border-radius: 8px;
@@ -51,7 +53,8 @@ body {
     width: 100%;
     position: sticky;
     display: flex;
-
+    position: relative;
+    top: 75px;
 }
 
 .community_name {
