--- a/Eventos/css/eventos.css
+++ b/Eventos/css/eventos.css
@@ -15,6 +15,8 @@ h1{
     background-size: cover;
     height: 120vh;
     overflow-x: hidden;
+    position: relative;
+    top: 50px;
 }
 .montserrat-bold {
   font-family: "Montserrat", sans-serif;
