--- a/Reportes/reportes.css
+++ b/Reportes/reportes.css
@@ -22,6 +22,8 @@ img {
   max-width: 1400px;
   margin: 0 auto;
   padding: 2rem;
+  position: relative;
+  top: 50px;
 }
 
 /* Titulo tipo Hero para introduccion */
@@ -333,6 +335,8 @@ textarea {
   font-size: 13.5px;
   padding: 6px 10px;
   width: 100%;
+  position: relative;
+  top: 50px;
 }
 
 .footer-contenido {
