--- a/Emprendimientos/Emprendimientos.css
+++ b/Emprendimientos/Emprendimientos.css
@@ -14,12 +14,16 @@ body {
 }
 
 .head_content {
-    background-color: #1398E8;
-    height: 80px;
+    background: linear-gradient(to bottom,
+            #1398E8 50%,
+            /* color sólido hasta el 70% de la altura */
+            rgba(52, 200, 219, 0.5) 80%,
+            /* transición suave */
+            rgba(52, 152, 219, 0.007) 100%);
+    height: 300px;
     width: 100%;
     position: sticky;
     display: flex;
-
 }
 
 .community_name {
@@ -61,6 +65,7 @@ body {
     align-content: center;
     display: flex;
     background-color: transparent;
+    margin-top: 3%;
 
 }
 
@@ -144,7 +149,6 @@ body {
     margin-left: 800px;
     align-content: center;
     justify-content: center;
-
 }
 
 .view-sales {
@@ -159,6 +163,7 @@ body {
     font-size: 14px;
     transition: .5s;
     width: 140px;
+    box-shadow: 0px 0px 14px -3px black;
 }
 
 .view-sales:hover {
@@ -168,6 +173,7 @@ body {
     font-size: 15px;
     background-color: #708f01;
     color: white;
+    box-shadow: 0px 0px 18px -1px black;
 }
 
 
@@ -361,37 +367,37 @@ body {
 
 
 .footer-principal {
-  background-color: #1D72A7;
-  color: white;
-  font-size: 13.5px;
-  padding: 6px 10px;
-  width: 100%;
+    background-color: #1D72A7;
+    color: white;
+    font-size: 13.5px;
+    padding: 6px 10px;
+    width: 100%;
 }
 
 .footer-contenido {
-  max-width: 1000px;
-  margin: 0 auto;
-  text-align: center;
-  line-height: 1.3;
+    max-width: 1000px;
+    margin: 0 auto;
+    text-align: center;
+    line-height: 1.3;
 }
 
 .footer-info p,
 .footer-creditos p {
-  margin: 0;
+    margin: 0;
 }
 
 .footer-titulo {
-  font-size: 15px;
-  font-weight: 700;
-  margin-bottom: 2px;
+    font-size: 15px;
+    font-weight: 700;
+    margin-bottom: 2px;
 }
 
 .footer-principal a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .footer-creditos a img.logo-creador {
-  max-width: 90px;
-  height: auto;
-  margin-top: 2px;
+    max-width: 90px;
+    height: auto;
+    margin-top: 2px;
 }
