--- a/Emprendimientos/Emprendimientos.css
+++ b/Emprendimientos/Emprendimientos.css
@@ -195,6 +195,7 @@ svg {
     width: 80%;
     height: 500px;
     margin-top: 30px;
+    margin-bottom: 50px;
     border-radius: 40px;
     box-shadow: 0px 0px 16px -5px black;
     padding: 20px;
