--- a/Emprendimientos/Ofertas.css
+++ b/Emprendimientos/Ofertas.css
@@ -212,6 +212,7 @@ svg {
     width: 95%;
     height: 100%;
     margin-top: 40px;
+    margin-bottom: 40px;
     min-height: 90%;
     border-radius: 40px;
     box-shadow: 0px 0px 16px -5px black;
