--- a/Emprendimientos/Ofertas.css
+++ b/Emprendimientos/Ofertas.css
@@ -100,15 +100,12 @@ svg {
 }
 
 .filter {
-    padding: 10px;
-    justify-content: left;
-    margin-left: 10%;
-    width: 100%;
-    align-content: center;
+    margin: 20px auto;
+    width: 90%;
     display: flex;
-    background-color: transparent;
-    margin-top: 8%;
-
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 80px;
 }
 
 .mini-nav {
@@ -201,24 +198,6 @@ svg {
     width: 100%;
 }
 
-.sales_card {
-    margin: 0 auto;
-    display: grid;
-    justify-items: center;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    row-gap: 30px;
-    /*grid-template-columns: repeat(3, 1fr);*/
-    width: 95%;
-    height: 100%;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    min-height: 90%;
-    border-radius: 40px;
-    box-shadow: 0px 0px 16px -5px black;
-    background-color: rgb(255, 255, 255);
-    padding: 30px;
-    overflow: auto;
-}
 
 .sales_card::-webkit-scrollbar {
     width: 8px;
@@ -235,17 +214,27 @@ svg {
     border-radius: 10px;
 }
 
+.sales_card {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    background-color: white;
+    border-radius: 40px;
+    box-shadow: 0px 0px 16px -5px black;
+    padding: 30px;
+    width: 95%;
+    margin: 40px auto;
+}
+
 .item {
-    background: rgba(128, 195, 66, 0);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background: white;
     box-shadow: 0px 0px 12px -6px black;
     padding: 20px;
-    text-align: center;
-    width: 92%;
-    height: 105%;
-    min-width: 92%;
-    max-height: 105%;
     border-radius: 12px;
-    transition: .7s;
+    transition: .3s;
 }
 
 .item:hover {
